--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,63 @@
 .App {
   text-align: center;
+  padding: 0px !important
+}
+.home{
+  background-color: black;
+  color: white;
+  height: 70px;
+  padding-top: 10px;
+}
+.About{
+  background-color:blue;
+  color: white;
+  height: 70px;
+  padding-top: 10px;
+}
+.Contact{
+  background-color:green;
+  color: white;
+  height: 70px;
+  padding-top: 10px;
+}
+.btn{
+  /* background-color:green; */
+  margin: 10px;
+  padding: 5px;
+
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 50vmin;
+  /* position: relative; */
+  /* width: 400px; */
+  /* height: 400px; */
+  border-radius: 10em;
   pointer-events: none;
+  margin-top: 10px !important;
+}
+.App-logo-About{
+  height: 60vmin;
+
+  border-radius: 20em;
+
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 5s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  /* background-color: #282c34; */
+  /* min-height: 10vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  /* color: white; */
 }
 
 .App-link {
