--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .App {
+  width: 98%;
   text-align: center;
   padding: 0px !important
 }
@@ -21,10 +22,13 @@
   padding-top: 10px;
 }
 .btn{
-  /* background-color:green; */
-  margin: 10px;
-  padding: 5px;
+display: flex;
+justify-content: center;
 
+}
+.btndiv{
+  /* width: 100%; */
+  align-self: center;
 }
 
 .App-logo {
